# NovaPainel

./: .gitignore  AGENTS.md  ANALISE-ARQUITETURAL-2026-07-02.md  CLAUDE.md  NovaPanel.code-workspace  README.md  backup_lines.txt  novapanel_firmware_analysis.docx  novasources_full_clean_output.txt  temp_backup_msg.txt  temp_part.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  FASE0-CHECKLIST.md  FIELD-OPERATIONS.md  HARDWARE.md  OPERATIONS.md  PLANEJAMENTO.md  PROTOCOL.md  README.md  RELEASE-ROLLBACK.md  RESOURCE-BUDGET.md  ROADMAP.md  SECURITY-OPERATIONS.md  SOAK-VALIDATION.md  STATUS.md  TESTING.md  UI-PATTERN.md
docs/design/: README.md
docs/design/lvgl_export_reference/: CMakeLists.txt  README.md  novapanel.c  novapanel.h  novapanel_theme.h
docs/design/lvgl_export_reference/screens/: screen_agenda.c  screen_alarmes.c  screen_boot.c  screen_casa.c  screen_clima.c  screen_config.c  screen_home.c  screen_mercado.c  screen_notif.c  screen_setup.c  screen_timer.c
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.prod
firmware/components/board/: CMakeLists.txt  idf_component.yml
firmware/components/board/include/: i_board.hpp  mock_board.hpp  waveshare_board.hpp
firmware/components/board/src/: mock_board.cpp  waveshare_board.cpp
firmware/components/providers/: CMakeLists.txt
firmware/components/providers/include/: awesomeapi_provider.hpp  coingecko_provider.hpp  forex_provider.hpp  i_forex_provider.hpp  i_weather_provider.hpp  mock_market_provider.hpp  open_meteo_provider.hpp  provider_interfaces.hpp
firmware/components/providers/src/: awesomeapi_provider.cpp  coingecko_provider.cpp  forex_provider.cpp  mock_market_provider.cpp  open_meteo_provider.cpp  provider_interfaces.cpp
firmware/components/services/: CMakeLists.txt
firmware/components/services/include/: clock_service.hpp  forex_service.hpp  market_service.hpp  network_worker.hpp  notification_service.hpp  setup_service.hpp  setup_storage_logic.hpp  weather_service.hpp
firmware/components/services/src/: bootstrap_service.cpp  clock_service.cpp  forex_service.cpp  market_service.cpp  network_worker.cpp  notification_service.cpp  setup_service.cpp  setup_storage_logic.cpp  system_service.cpp  weather_service.cpp
firmware/components/ui/: CMakeLists.txt
firmware/components/ui/fonts/: nova_font_32.c
firmware/components/ui/include/: boot_view_model.hpp  builtin_screens.hpp  home_screen.hpp  home_view_model.hpp  main_shell.hpp  novapanel_fonts.hpp  novapanel_theme.hpp  novapanel_ui.hpp  screen_registry.hpp  screen_spec.hpp  settings_screen.hpp  setup_screen.hpp  setup_view_model.hpp  shared_keyboard.hpp  shell_chrome_view_model.hpp  strings_ptbr.hpp  ui_shell.hpp  ui_theme.hpp
firmware/components/ui/src/: boot_view_model.cpp  builtin_screens.cpp  home_view_model.cpp  main_shell.cpp  novapanel_ui.cpp  screen_registry.cpp  setup_view_model.cpp  shared_keyboard.cpp  shell_chrome_view_model.cpp  ui_shell.cpp
firmware/components/ui/src/common/: nova_keyboard_manager.cpp
firmware/components/ui/src/fonts/: fontawesome_16.c  fontawesome_20.c  fontawesome_24.c  lv_font_material_16.c  lv_font_material_24.c  lv_font_montserrat_bold_14.c  lv_font_montserrat_bold_16.c  lv_font_montserrat_extrabold_94.c  nova_font_14.c  nova_font_20.c  nova_font_64.c  nova_font_bold_14.c  nova_font_bold_16.c  nova_font_bold_20.c  nova_font_bold_24.c  nova_font_bold_28.c  nova_font_extrabold_64.c  nova_font_extrabold_92.c
firmware/components/ui/src/screens/: boot_screen.cpp  home_screen.cpp  screen_agenda.cpp  screen_alarm_timer.cpp  screen_boot.cpp  screen_home.cpp  screen_market.cpp  screen_placeholders.cpp  screen_settings.cpp  screen_setup.cpp  screen_weather.cpp  settings_screen.cpp  setup_screen.cpp  system_screen.cpp
firmware/main/: CMakeLists.txt  app_main.cpp
firmware/tests/: host_sources.txt
firmware_legacy_reference/: .idfpath.txt  CMakeLists.txt  serial_capture.txt  tools_capture_serial.py
firmware_legacy_reference/components/services/: CMakeLists.txt
firmware_legacy_reference/components/services/include/: market_service.hpp  notification_service.hpp
firmware_legacy_reference/components/services/src/: setup_service.cpp
firmware_legacy_reference/components/ui/: CMakeLists.txt
firmware_legacy_reference/components/ui/fonts/: nova_font_24.c
firmware_legacy_reference/components/ui/include/: boot_screen.hpp  home_screen.hpp  nova_fonts.hpp
firmware_legacy_reference/components/ui/include/common/: nova_keyboard_manager.hpp
firmware_legacy_reference/components/ui/src/screens/: settings_screen.cpp  wizard_screen.cpp
firmware_legacy_reference/experiments/gate15_coexistence/main/: CMakeLists.txt  gate15_main.c  idf_component.yml
reference/: README.md
reference/firmware_v3/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.prod
reference/firmware_v3/components/ui/: CMakeLists.txt  package-lock.json  package.json
reference/firmware_v3/components/ui/include/: novapanel_theme.hpp  novapanel_ui.hpp
reference/firmware_v3/components/ui/include/common/: nova_keyboard_manager.hpp
reference/firmware_v3/components/ui/src/: novapanel_ui.cpp
reference/firmware_v3/components/ui/src/common/: nova_keyboard_manager.cpp
reference/firmware_v3/components/ui/src/fonts/: lv_font_material_18.c  lv_font_material_48.c  nova_font_bold_24.c  nova_font_bold_28.c  nova_font_extrabold_64.c  nova_font_extrabold_92.c
reference/firmware_v3/components/ui/src/screens/: screen_agenda.cpp  screen_alarm_timer.cpp  screen_boot.cpp  screen_home.cpp  screen_market.cpp  screen_setup.cpp  screen_weather.cpp
reference/firmware_v3_field_snapshot/components/board/: CMakeLists.txt
server/: README.md  pyproject.toml
server/src/novapainel_server/: __init__.py  main.py
server/src/novapainel_server/api/: __init__.py
server/src/novapainel_server/integrations/: __init__.py
server/src/novapainel_server/models/: __init__.py
server/src/novapainel_server/services/: __init__.py
server/tests/: README.md
shared/: README.md
shared/protocol/: commands.md  (+1 more)
tools/: README.md
(+161 files in other folders)
