idf_component_register(
    SRCS
        "src/boot_view_model.cpp"
        "src/builtin_screens.cpp"
        "src/home_view_model.cpp"
        "src/screen_registry.cpp"
        "src/shared_keyboard.cpp"
        "src/shell_chrome_view_model.cpp"
        "src/setup_view_model.cpp"
        "src/ui_shell.cpp"
        "src/screens/boot_screen.cpp"
        "src/screens/home_screen.cpp"
        "src/screens/setup_screen.cpp"
        "src/fonts/lv_font_material_16.c"
        "src/fonts/lv_font_material_18.c"
        "src/fonts/lv_font_material_24.c"
        "src/fonts/lv_font_material_48.c"
        "src/fonts/nova_font_14.c"
        "src/fonts/nova_font_16.c"
        "src/fonts/nova_font_20.c"
        "src/fonts/nova_font_24.c"
        "src/fonts/nova_font_28.c"
        "src/fonts/nova_font_32.c"
        "src/fonts/nova_font_48.c"
        "src/fonts/nova_font_64.c"
        "src/fonts/nova_font_bold_14.c"
        "src/fonts/nova_font_bold_16.c"
        "src/fonts/nova_font_bold_20.c"
        "src/fonts/nova_font_bold_24.c"
        "src/fonts/nova_font_bold_28.c"
        "src/fonts/nova_font_extrabold_64.c"
        "src/fonts/nova_font_extrabold_92.c"
    INCLUDE_DIRS "include"
    REQUIRES
        core
        lvgl
        models
)
