idf_component_register(
    SRCS
        "src/common/nova_keyboard_manager.cpp"
        "src/fonts/lv_font_material_16.c"
        "src/fonts/lv_font_material_18.c"
        "src/fonts/lv_font_material_24.c"
        "src/fonts/lv_font_material_48.c"
        "src/fonts/nova_font_14.c"
        "src/fonts/nova_font_16.c"
        "src/fonts/nova_font_20.c"
        "src/fonts/nova_font_24.c"
        "src/fonts/nova_font_28.c"
        "src/fonts/nova_font_32.c"
        "src/fonts/nova_font_48.c"
        "src/fonts/nova_font_64.c"
        "src/fonts/nova_font_bold_14.c"
        "src/fonts/nova_font_bold_16.c"
        "src/fonts/nova_font_bold_20.c"
        "src/fonts/nova_font_bold_24.c"
        "src/fonts/nova_font_bold_28.c"
        "src/fonts/nova_font_extrabold_64.c"
        "src/fonts/nova_font_extrabold_92.c"
        "src/novapanel_ui.cpp"
        "src/screens/screen_boot.cpp"
        "src/screens/screen_agenda.cpp"
        "src/screens/screen_home.cpp"
        "src/screens/screen_market.cpp"
        "src/screens/screen_alarm_timer.cpp"
        "src/screens/screen_settings.cpp"
        "src/screens/screen_weather.cpp"
        "src/screens/screen_placeholders.cpp"
        "src/screens/screen_setup.cpp"
    INCLUDE_DIRS "include"
    REQUIRES models lvgl
)
